fixed overflow on x axis

--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -15,7 +15,7 @@
 
 .container {
   // add background blur;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 1);
   backdrop-filter: blur(10px);
   border-radius: 1rem;
   padding: 2rem;
