--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,6 +15,7 @@ body {
   border: 0;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 h1 {
